cluster/dev-cluster/templates/service.yaml
---
# Source: vcluster/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-cluster
  namespace: dev-cluster
  labels:
    app: vcluster
    chart: "vcluster-0.4.3"
    release: "dev-cluster"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: vcluster
    release: dev-cluster
